# txrx

./: .gitignore  Crc16.h  Definitions.h  LICENSE.txt  Logging.h  Makefile  Makefile.1  Makefile.2  NanoNet.h  NanoNet.noir.h  NanoNet.orig.h  README.md  rewrite.ino  txrx.ino  update_links.sh
old/: update_links.sh
old/recieveframe/: recieveframe.ino
old/recieveframe2/: recieveframe2.ino
old/rusttest/: NanoNet.h
old/rusttest2/: Cargo.toml  uno-runner.sh
old/rusttest2/src/: main.rs
old/transmitframe/: transmitframe.ino
old/transmitframe2/: transmitframe2.ino
old2/: Makefile  NanoNet.old.h  rusttest.ino
old2/old2_USB2/: Makefile  NanoNet.h  new_USB2.ino
old2/old_USB0/: Makefile  NanoNet.h  USB0.ino
old2/old_USB2/: Makefile  USB2.ino
recieve/: recieve.ino
recieve2/: recieve2.ino
recieveframe/: NanoNet.h  recieveframe.ino
recieveframe2/: NanoNet.h
rewrite/: Definitions.h  Makefile  Makefile.2  NanoNet.h  NanoNet.orig.h  rewrite.ino
routingtest/: routingtest.ino
rusttest2/: Cargo.toml
tests/: 28k.h
transmit/: transmit.ino
transmit2/: transmit2.ino
transmitframe/: NanoNet.h  transmitframe.ino
transmitframe2/: transmitframe2.ino
