[package]
name = "rusttest2"
version = "0.1.0"
authors = ["Ezra Barrow <barrow@tilde.team>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
avr-device = "0.3"
ufmt = "0.1.0"

[dependencies.arduino-uno]
git = "https://github.com/rahix/avr-hal"
rev = "b1aedf824fcb59078f8022d4464b2835ae4bd83a"
features = ["rt", "arduino-nano"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
